ros2_packages_ws/log/build_2024-06-01_03-07-01/localization/stderr.log
  File "/home/puzzlebot/Puzzlebot_Lidar_ROS1_ROS2/ros2_packages_ws/install/localization/lib/python3.8/site-packages/localization/to_goal_aruco.py", line 315
    if(self.state != "kalman filter")
                                    ^
SyntaxError: invalid syntax

